test/files/continuations-neg/lazy.check
lazy.scala:5: error: type mismatch;
 found   : Unit @scala.util.continuations.cpsParam[Unit,Unit]
 required: Unit
  def foo() = {
              ^
one error found
